--- a/html/fridge_magnet.html
+++ b/html/fridge_magnet.html
@@ -48,6 +48,10 @@ body, html {
   background-color: red;
   color: white;
 }
+.magnet-purple {
+  background-color: white;
+  color: purple;
+}
 .white-on-black {
   background-color: black;
   color: white;
@@ -69,6 +73,7 @@ body, html {
   <select id="style-select">
     <option value="">Default</option>
     <option value="red">Red</option>
+    <option value="magnet-purple">Purple </option>
     <option value="white-on-black">White on black</option>
     <option value="blue-large">Blue Large</option>
   </select>
