--- a/html/fridge_magnet.html
+++ b/html/fridge_magnet.html
@@ -51,6 +51,8 @@ body, html {
 .magnet-purple {
   background-color: white;
   color: purple;
+  font-variant: small-caps;
+  font-size: 3em;
 }
 .white-on-black {
   background-color: black;
