--- a/html/fridge_magnet.html
+++ b/html/fridge_magnet.html
@@ -53,6 +53,9 @@ body, html {
   color: purple;
   font-variant: small-caps;
   font-size: 3em;
+  border-width: 2px;
+  border-color: purple;
+  border-style: solid;
 }
 .white-on-black {
   background-color: black;
