rename to heading, remove caps

--- a/html/fridge_magnet.html
+++ b/html/fridge_magnet.html
@@ -48,10 +48,9 @@ body, html {
   background-color: red;
   color: white;
 }
-.magnet-purple {
+.magnet-head {
   background-color: white;
   color: purple;
-  font-variant: small-caps;
   font-size: 3em;
   border-width: 2px;
   border-color: purple;
@@ -78,7 +77,7 @@ body, html {
   <select id="style-select">
     <option value="">Default</option>
     <option value="red">Red</option>
-    <option value="magnet-purple">Purple </option>
+    <option value="magnet-head">Heading</option>
     <option value="white-on-black">White on black</option>
     <option value="blue-large">Blue Large</option>
   </select>
